@@ -12,37 +12,6 @@ A #GtkSpinButton is an ideal way to allow the user to set the value of some attr
 The main properties of a #GtkSpinButton are through a #GtkAdjustment. See the #GtkAdjustment section for more details about an adjustment's properties.
 </para>
 <para>
-#GtkSpinButton widgets are created with a call to gtk_spin_button_new().
-</para>
-<para>
-The #GtkAdjustment of a spin button can be set or retrieved with a call to gtk_spin_button_set_adjustment() or gtk_spin_button_get_adjustment(), respectively.
-</para>
-<para>
-The number of digits after the decimal point of a spin button can be altered with gtk_spin_button_set_digits().
-</para>
-<para>
-To retrieve values from a spin button, use gtk_spin_button_get_value_as_float() if you require a floating point number, or gtk_spin_button_get_value_as_int() if you require an integer.
-</para>
-<para>
-To set the value of a #GtkSpinButton, use gtk_spin_button_set_value(). To change the update behaviour of a spin button, use gtk_spin_button_set_update_policy().
-</para>
-<para>
-When a spin button reaches it's upper or lower limit, it can either stop spinning, or wrap around and continue spinning from the opposite limit. For example, if five is the upper limit and the lower limit is zero, upon reaching the value five, the spin button can change it's value back to zero and continue spinning upwards.
-This behaviour is set with gtk_spin_button_set_wrap().
-</para>
-<para>
-A border around a spin button's arrows can be created using gtk_spin_button_set_shadow_type().
-</para>
-<para>
-A number may be entered that is invalid, given a spin button's range. An erroneous number can be corrected as soon as the spin button is 'activated' using gtk_spin_button_snap_to_ticks(), which will alter the current value to the nearest step increment. (See #GtkAdjustment for step increments).
-</para>
-<para>
-Because a spin contains a #GtkEntry, alphabetic characters may be entered. These can be ignored by using gtk_spin_button_set_numeric() with a value of TRUE. Then only numeric values, '-' and a decimal point will be accepted.
-</para>
-<para>
-To manually increment or decrement the spin button, use gtk_spin_button_spin(), and to force an update (refresh), use gtk_spin_button_update().
-</para>
-<para>
 <example>
 <title>Using a GtkSpinButton to get an integer.</title>
 <programlisting>
@@ -201,114 +170,6 @@ Creates a new #GtkSpinButton.
 @climb_rate: specifies how much the spin button changes when an arrow is clicked on.
 @digits: the number of decimal places to display.
 @Returns: a #GtkWidget.
-
-
-<!-- ##### FUNCTION gtk_spin_button_set_adjustment ##### -->
-<para>
-Changes which #GtkAdjustment is associated with a spin button.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@adjustment: a #GtkAdjustment.
-
-
-<!-- ##### FUNCTION gtk_spin_button_get_adjustment ##### -->
-<para>
-Retrieves the #GtkAdjustment used by a given spin button.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@Returns: a #GtkAdjustment.
-
-
-<!-- ##### FUNCTION gtk_spin_button_set_digits ##### -->
-<para>
-Alters the number of decimal places that are displayed in a spin button.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@digits: the number of decimal places.
-
-
-<!-- ##### FUNCTION gtk_spin_button_get_value_as_float ##### -->
-<para>
-Retrieves the current value of a #GtkSpinButton. If the number has no decimal places, it is converted to a float before the function returns.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@Returns: the value of @spin_button as a #gfloat.
-
-
-<!-- ##### FUNCTION gtk_spin_button_get_value_as_int ##### -->
-<para>
-Retrieves the current integer value of a #GtkSpinButton.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@Returns: the value of @spin_button as a #gint.
-
-
-<!-- ##### FUNCTION gtk_spin_button_set_value ##### -->
-<para>
-Sets the value of a spin button.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@value: the new floating point value.
-
-
-<!-- ##### FUNCTION gtk_spin_button_set_update_policy ##### -->
-<para>
-Changes the way a spin button refreshes and updates itself. See %GtkSpinButtonUpdatePolicy for more information.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@policy: the new update policy.
-
-
-<!-- ##### FUNCTION gtk_spin_button_set_numeric ##### -->
-<para>
-Sets how the spin button's #GtkEntry reacts to alphabetic characters. A value of TRUE to @numeric means that all non-numeric characters (except '-' and a decimal point) are ignored.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@numeric: whether letters should be ignored.
-
-
-<!-- ##### FUNCTION gtk_spin_button_spin ##### -->
-<para>
-Performs an explicit 'spin' on a spin button.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@direction: the type of spin to perform.
-@increment: the amount to spin.
-
-
-<!-- ##### FUNCTION gtk_spin_button_set_wrap ##### -->
-<para>
-Sets a spin button's value to the lower limit when it's upper limit is reached, and vice versa.
-</para>
-
-@spin_button: a #GtkSpinButton.
-@wrap: defaults to FALSE, set to TRUE to make the spin button wrap.
-
-
-<!-- ##### FUNCTION gtk_spin_button_set_snap_to_ticks ##### -->
-<para>
-Sets whether a number typed into a spin button should be snapped to the nearest step increment.
-</para>
-
-@spin_button: a #GtkButton.
-@snap_to_ticks: TRUE or FALSE.
-
-
-<!-- ##### FUNCTION gtk_spin_button_update ##### -->
-<para>
-Refreshes a spin button. The behaviour of the update is determined by gtk_spin_button_set_update_policy().
-</para>
-
-@spin_button: a #GtkSpinButton.
 
 
 <!-- ##### MACRO GTK_INPUT_ERROR ##### -->
