@@ -1,3 +1,8 @@
+2001-03-29  Mike Kestner  <mkestner@ameritech.net>
+
+	* gtk/tmpl/gtkspinbutton.html: killed function docs that are now
+	inline.
+
 2001-03-23  Havoc Pennington  <hp@redhat.com>
 
 	* gdk/gdk-sections.txt: updates
